--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Project Grids -->
     <div class = "zone blue grid-wrapper">
-      <div class="box zone"><img src="./img/files_2.png"></div>
+      <div class="box zone"><img src="weblayout/img/files_2.png"></div>
       <div class="box zone"><img src="weblayout/server_2_2.png"></div>
       <div class="box zone"><img src="weblayout/monitor_settings_2.png"></div>
       <div class="box zone"><img src="weblayout/server_3.png"></div>
