--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- Project Grids -->
     <div class = "zone blue grid-wrapper">
       <div class="box zone"><img src="weblayout/img/files_2.png"></div>
-      <div class="box zone"><img src="weblayout/server_2_2.png"></div>
+      <div class="box zone"><img src="weblayout/img/server_2_2.png"></div>
       <div class="box zone"><img src="weblayout/monitor_settings_2.png"></div>
       <div class="box zone"><img src="weblayout/server_3.png"></div>
       <div class="box zone"><img src="weblayout/data_storage_2_2.png"></div>
