--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 <!-- Project Grids -->
     <div class = "zone blue grid-wrapper">
       <div class="box zone"><img src="img/data_storage_2_2.png"></div>
-      <div class="box zone"><img src="weblayout/img/server_2_2.png"></div>
-      <div class="box zone"><img src="weblayout/monitor_settings_2.png"></div>
-      <div class="box zone"><img src="weblayout/server_3.png"></div>
-      <div class="box zone"><img src="weblayout/data_storage_2_2.png"></div>
-      <div class="box zone"><img src="weblayout/monitor_coding_2.png"></div>
-      <div class="box zone"><img src="weblayout/desktop_analytics_2.png"></div>
-      <div class="box zone"><img src="weblayout/server_safe_2.png"></div>
-      <div class="box zone"><img src="weblayout/files_2.png"></div>
-      <div class="box zone"><img src="weblayout/monitor_settings_2.png"></div>
+      <div class="box zone"><img src="img/server_2_2.png"></div>
+      <div class="box zone"><img src="img/monitor_settings_2.png"></div>
+      <div class="box zone"><img src="img/server_3.png"></div>
+      <div class="box zone"><img src="img/data_storage_2_2.png"></div>
+      <div class="box zone"><img src="img/monitor_coding_2.png"></div>
+      <div class="box zone"><img src="img/desktop_analytics_2.png"></div>
+      <div class="box zone"><img src="img/server_safe_2.png"></div>
+      <div class="box zone"><img src="img/files_2.png"></div>
+      <div class="box zone"><img src="img/monitor_settings_2.png"></div>
 
 
     </div>
