--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
 
   <!-- Cover area -->
-    <div class="container zone red"></div>
+    <div class="container zone red"><img class="cover" src=img/undraw.png></div>
 
 
 <!-- Project Grids -->
