--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Main navigation area -->
-  <nav class="zone blue sticky">
+  <nav class="zone green sticky">
     <ul class = "main-nav">
       <li><a href="">About</a></li>
       <li><a href="">Products</a></li>
